// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compiler: v-once > as root node 1`] = `
"import { setProp as _setProp, template as _template } from 'vue';
const t0 = _template("<div></div>", true)

export function render(_ctx) {
  const n0 = t0()
  _setProp(n0, "id", _ctx.foo)
  return n0
}"
`;

exports[`compiler: v-once > basic 1`] = `
"import { child as _child, next as _next, toDisplayString as _toDisplayString, setText as _setText, setClass as _setClass, template as _template } from 'vue';
const t0 = _template("<div> <span></span></div>", true)

export function render(_ctx, $props, $emit, $attrs, $slots) {
  const n2 = t0()
  const n0 = _child(n2)
  const n1 = _next(n0)
  _setText(n0, _toDisplayString(_ctx.msg) + " ")
  _setClass(n1, _ctx.clz)
  return n2
}"
`;

exports[`compiler: v-once > inside v-once 1`] = `
"import { template as _template } from 'vue';
const t0 = _template("<div><div></div></div>", true)

export function render(_ctx) {
  const n0 = t0()
  return n0
}"
`;

exports[`compiler: v-once > on component 1`] = `
"import { resolveComponent as _resolveComponent, setInsertionState as _setInsertionState, createComponentWithFallback as _createComponentWithFallback, template as _template } from 'vue';
const t0 = _template("<div></div>", true)

export function render(_ctx) {
  const _component_Comp = _resolveComponent("Comp")
  const n1 = t0()
  _setInsertionState(n1)
  const n0 = _createComponentWithFallback(_component_Comp, { id: () => (_ctx.foo) }, null, null, true)
  return n1
}"
`;

exports[`compiler: v-once > on nested plain element 1`] = `
"import { child as _child, setProp as _setProp, template as _template } from 'vue';
const t0 = _template("<div><div></div></div>", true)

export function render(_ctx) {
  const n1 = t0()
  const n0 = _child(n1)
  _setProp(n0, "id", _ctx.foo)
  return n1
}"
`;

exports[`compiler: v-once > with v-for 1`] = `
"import { createFor as _createFor, template as _template } from 'vue';
const t0 = _template("<div></div>", true)

export function render(_ctx) {
  const n0 = _createFor(() => (_ctx.list), (_for_item0) => {
    const n2 = t0()
    return n2
  }, undefined, 4)
  return n0
}"
`;

exports[`compiler: v-once > with v-if 1`] = `
"import { createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<div></div>", true)

export function render(_ctx) {
  const n0 = _createIf(() => (_ctx.expr), () => {
    const n2 = t0()
    return n2
  }, null, true)
  return n0
}"
`;

exports[`compiler: v-once > with v-if/else 1`] = `
"import { createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<div></div>")
const t1 = _template("<p></p>")

export function render(_ctx) {
  const n0 = _createIf(() => (_ctx.expr), () => {
    const n2 = t0()
    return n2
  }, () => {
    const n4 = t1()
    return n4
  }, true)
  return n0
}"
`;
